--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<li><a href="#" data-nav-section="skills">Skills</a></li>
 							<li><a href="#" data-nav-section="education">Education</a></li>
 							<li><a href="#" data-nav-section="projects">Projects</a></li>
-							<li><a href="#" data-nav-section="internship">Internships</a></li>
+							<li><a href="#" data-nav-section="internship">Experiences</a></li>
 							<li><a href="#" data-nav-section="certificate">Certifications</a></li>
 							<li><a href="#" data-nav-section="contact">Contact</a></li>
 
@@ -107,27 +107,52 @@
 											<h2 class="colorlib-heading">About Me</h2>
 											<!-- Change content of paragraph tag -->
 											<p>
-												<font size="3.5"><strong>I'm Shreenidhi Kulkarni </strong>, a data
-													enthusiast residing in Bangalore, India. I thoroughly enjoy
-													engaging in problem-solving and hands-on projects. After completing
-													my Graduation in Computer Applications, I have
-													now set out on a new path as a Post-graduate Data Science student at
-													CHRIST [Deemed to be University]. This educational journey
-													allows me to delve deeper into the ever-evolving field of Data
-													Science, nurturing and expanding my expertise
-													in this dynamic domain.</font>
+												<font size="4.5" color="#2c3e50">
+													<strong>I'm Shreenidhi Kulkarni</strong>
+												</font>
 											</p>
-											<font size="2.8">Beliving that with a simple inference great changes can be
-												bought, making the world a better place to live in ! </font>
+											<p>
+												<font size="3.5">
+													A Master’s student specializing in <strong>Data Science</strong> at <strong>Christ University, 
+														Bangalore</strong>. My journey into the realm of data began with a profound curiosity about how 
+														information shapes our world. This fascination has driven me to delve deeply into the 
+														intricacies of <strong>data analytics, machine learning, and statistical modeling</strong>.
+												</font>
+											</p>
+											<p>
+												<font size="3.5">
+													With a comprehensive academic background, I have honed my skills in extracting meaningful insights from 
+													complex datasets. 
+													My passion lies in utilizing data to solve real-world problems and drive informed decision-making. 
+													I am particularly drawn to the <strong>healthcare domain</strong>, where 
+													I believe data science can <strong>revolutionize patient care</strong> and improve health outcomes. 
+													Whether it’s developing <strong>predictive models</strong> for disease risk assessment or creating compelling 
+													data visualizations to support clinical decisions, 
+													I am committed to transforming raw data into actionable strategies that can lead to impactful outcomes.
+												</font>
+											</p>
+											<p>
+												<font size="3.5">
+													As I progress through my studies, I continuously seek opportunities to apply my knowledge in practical settings. 
+													I am enthusiastic about collaborating on innovative projects that harness the power of data to address
+													 contemporary challenges, especially in healthcare. Through my work, I aspire to contribute to advancements 
+													 in technology and promote a <strong>data-driven culture</strong> in various domains.
+												</font>
+											</p>
+											<p>
+												<font size="2.8">
+													Thank you for visiting my portfolio. I invite you to explore my projects and insights that reflect 
+													my dedication to the field of <strong>Data Science</strong> and my commitment to making a difference in healthcare.
+												</font>
+											</p>
 											<p>&nbsp;<br>&nbsp;</p>
-
 										</div>
 									</div>
 								</div>
 								<div class="row">
 									<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 										<!-- Edit google drive Link -->
-										<a href="https://drive.google.com/file/d/1SX7jN4HIJxLgfge7py6N2PZl7LCwxcq2/view?usp=drive_link"
+										<a href="https://drive.google.com/file/d/1X7YXQNxCc0gUhYnic6in-w_VAvgXoGeR/view?usp=sharing"
 											target="_blank">
 											<div class="services color-4">
 												<span class="icon2">
@@ -140,7 +165,7 @@
 
 									<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 										<!-- Edit Link -->
-										<a href="https://www.linkedin.com/in/shreenidhi-kulkarni-a7841b212" target="_blank">
+										<a href="https://www.linkedin.com/in/shreenidhi-kulkarni" target="_blank">
 											<div class="services color-1">
 												<span class="icon2">
 													<i class="icon-linkedin2"></i>
@@ -168,7 +193,7 @@
 											<div class="services color-3">
 												<span class="icon2">
 													<i class="fab fa-kaggle"></i>
-													<h3>Kaggle</h3>
+													<h3>Tableau</h3>
 												</span>
 											</div>
 										</a>
@@ -507,14 +532,16 @@
 									</a>
 									<div class="desc">
 										<!-- Edit content for your specialization -->
-										<h3>Amazon Sentimental Analysis</h3>
-										<p>Analyzing sentiment in Amazon reviews through machine learning methods, 
-											with a focus on using LSTM networks to achieve robust accuracy and effectiveness in classification.
+										<h3>Toodle-Doodle (Talent Identification Web Application)</h3>
+										<p>Toodle-Doodle is a web application utilizing data analytics and machine learning to effectively 
+											identify and promote talents across diverse fields through personalized recommendations and portfolio management.
 										</p>
-										<p id="project-tool">NumPy | Pandas | Matplotlib | TensorFlow | LSTM | NLTK | Scikit-learn | Keras</p>
+										<p id="project-tool">Python | MongoDB | AWS | NLP | HTML | CSS | PHP | JavaScript | Flask | Django | ReactJs</p>
 									</div>
 								</div>
 							</div>
+
+
 
 							<!-- Remove this div if you have only one specialization -->
 							<div class="col-md-4 text-center animate-box">
@@ -526,10 +553,10 @@
 									</a>
 									<div class="desc">
 										<!-- Edit content for your specialization -->
-										<h3>Diabetes Risk Prediction</h3>
-										<p>A model using the k-nearest neighbors (k-NN) algorithm to predict the risk of diabetes in patients.
-											The model aims to enable early detection and timely intervention, improving patient outcomes.</p>
-										<p id="project-tool">k-nearest neighbors (k-NN) | scikit-learn | pandas | NumPy | Matplotlib | Flask | HTML | CSS | JavaScript | Spyder</p>
+										<h3>Amazon Sentimental Analysis</h3>
+										<p>Analyzing sentiment in Amazon reviews through machine learning methods, 
+											with a focus on using LSTM networks to achieve robust accuracy and effectiveness in classification.</p>
+										<p id="project-tool">NumPy | Pandas | Matplotlib | TensorFlow | LSTM | NLTK | Scikit-learn | Keras</p>
 									</div>
 								</div>
 							</div>
@@ -544,23 +571,24 @@
 									</a>
 									<div class="desc">
 										<!-- Edit content for your specialization -->
-										<h3>Toodle-Doodle (Talent Identification Web Application)</h3>
-										<p>Toodle-Doodle is a web application utilizing data analytics and machine learning to effectively 
-											identify and promote talents across diverse fields through personalized recommendations and portfolio management.</p>
-										<p id="project-tool">AWS | MongoDB | Python | NLP | HTML | CSS | PHP | JavaScript | Flask | Django</p>
+										<h3>Diabetes Risk Prediction</h3>
+										<p>A model using the k-nearest neighbors (k-NN) algorithm to predict the risk of diabetes in patients.
+											The model aims to enable early detection and timely intervention, improving patient outcomes.
+											</p>
+										<p id="project-tool">k-nearest neighbors (k-NN) | scikit-learn | pandas | NumPy | Matplotlib | Flask | HTML | CSS | JavaScript | Spyder</p>
 									</div>
 								</div>
 							</div>
 
 				</section>
 
-				<!-- Remove this secion if you dont have Internships -->
+				<!-- Remove this secion if you dont have Work Experiences -->
 				<section class="colorlib-Projects" data-section="internship">
 					<div class="colorlib-narrow-content">
 						<div class="row">
 							<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box"
 								data-animate-effect="fadeInLeft">
-								<span class="heading-meta">Internships</span>
+								<span class="heading-meta">Experiences</span>
 								<h2 class="colorlib-heading animate-box">Areas I have earned experience in</h2>
 							</div>
 						</div>
@@ -573,31 +601,15 @@
 											<div class="timeline-icon color-1">
 												<i class="fas fa-laptop-code"></i>
 											</div>
-											<!-- Edit content based on your Internships -->
+											<!-- Edit content based on your Work Experiences -->
 											<div class="timeline-label" , style="background: #e5edf4;">
-												<h2><a href="#">Brainy Beam Technologies Pvt Ltd</a> <span> </span></h2>
-												<p id="project-tool">[May, 2024 - July, 2024]</p>
-												<p>In this internship I learned Machine Learning models like Linear
-													Regression, KMeans Clustering and Logistic Regression and worked on
-													an E-commerce prediction project.</p>
-												<p id="project-tool">Python | Machine Learning | Pipeline</p>
-											</div>
-										</div>
-									</article>
-
-									<!-- Edit content based on your Internships or remove article tag -->
-									<article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
-										<div class="timeline-entry-inner">
-											<div class="timeline-icon color-2">
-												<i class="fas fa-laptop-code"></i>
-											</div>
-											<div class="timeline-label" , style="background: #e5edf4;">
-												<h2><a href="#">Brainy Beam Technologies Pvt Ltd</a> <span> </span></h2>
-												<p id="project-tool">[Oct, 2023 - Jan, 2024]</p>
-												<p>In this internship I learned Machine Learning models like Linear
-													Regression, KMeans Clustering and Logistic Regression and worked on
-													an E-commerce prediction project.</p>
-												<p id="project-tool">Python | Machine Learning | Pipeline</p>
+												<h2><a href="#">LG Soft India Pvt Ltd</a> <span> </span></h2>
+												<p id="project-tool">[December, 2021 - July, 2022]</p>
+												<p>As a Software Test Engineer, I handled comprehensive testing processes for mobile applications, including Unit, Functional, 
+													Integration, Regression, System, and Performance testing, and managed end-to-end test management using the LGUP tool.
+													I was responsible for developing test strategies, preparing detailed test plans and cases, 
+													and analyzing requirements to ensure high-quality software deliverables.</p>
+												<p id="project-tool">LGUP&nbsp;&nbsp;|&nbsp;&nbsp;PUTTY&nbsp;&nbsp;|&nbsp;&nbsp;WINDOWS POWERSHELL&nbsp;&nbsp;|&nbsp;&nbsp;WIDEVINE&nbsp;&nbsp;|&nbsp;&nbsp;FACTORY COMMAND&nbsp;&nbsp;|&nbsp;&nbsp;AUTO QA</p>
 											</div>
 										</div>
 									</article>
@@ -628,6 +640,23 @@
 						<div class="row">
 							<div class="col-md-12">
 								<div class="timeline-centered">
+
+									<!-- Edit content based on your Certifications or remove article tag -->
+									<article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+										<div class="timeline-entry-inner">
+											<div class="timeline-icon color-2">
+												<i class="icon-pen2"></i>
+											</div>
+											<div class="timeline-label">
+												<h2><a href="#">Artificial Intelligence and Machine Learning</a> <span></span></h2>
+												<p id="project-tool">~ from Quant Masters Technologies Pvt.Ltd</p>
+												<p>During my internship in Artificial Intelligence and Machine Learning, I developed a project focused on Amazon Sentiment Analysis. 
+													This project utilized advanced machine learning techniques, particularly Long Short-Term Memory (LSTM) networks, 
+													to accurately classify user sentiments from Amazon reviews, offering valuable insights into customer opinions and trends for businesses.</p>
+											</div>
+										</div>
+									</article>
+
 									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 										<div class="timeline-entry-inner">
 
@@ -637,9 +666,40 @@
 											<!-- Edit content based on your Certifications -->
 											<div class="timeline-label">
 												<h2><a href="#">Tableau, Power BI, SQL, MongoDB</a> <span> </span></h2>
-												<p id="project-tool">~ from Coursera [IIT Madras]</p>
-												<p>Certifed by learnbay online learning platform for using data
+												<p id="project-tool">~ from Linkedin</p>
+												<p>Certifed by Linkedin online learning platform for using data
 													visualization tools and handling data with SQL and NoSQL skills.</p>
+											</div>
+										</div>
+									</article>
+
+									<!-- Edit content based on your Certifications or remove article tag -->
+									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+										<div class="timeline-entry-inner">
+											<div class="timeline-icon color-3">
+												<i class="icon-pen2"></i>
+											</div>
+											<div class="timeline-label">
+												<h2><a href="#">Statistical Data Analysis using SAS</a> <span></span></h2>
+												<p id="project-tool">~ from Christ University</p>
+												<p>Developed a strong foundation in statistical data analysis using SAS, focusing on data manipulation, 
+													modeling, and generating insights through advanced analytics techniques.</p>
+											</div>
+										</div>
+									</article>
+
+									<!-- Edit content based on your Certifications or remove article tag -->
+									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+										<div class="timeline-entry-inner">
+											<div class="timeline-icon color-3">
+												<i class="icon-pen2"></i>
+											</div>
+											<div class="timeline-label">
+												<h2><a href="#">Advanced NLP with Python for Machine Learning</a> <span></span></h2>
+												<p id="project-tool">~ from Linkedin</p>
+												<p>Gained expertise in Natural Language Processing (NLP) using Python, with a focus on applying 
+													machine learning algorithms to text data for tasks like sentiment analysis, text classification, 
+													and language modeling.</p>
 											</div>
 										</div>
 									</article>
@@ -654,21 +714,6 @@
 												<h2><a href="#">Python Programming</a> <span></span></h2>
 												<p id="project-tool">~ from Infosys Springboard</p>
 												<p>Have been certifed for python language at intermidiate level</p>
-											</div>
-										</div>
-									</article>
-
-									<!-- Edit content based on your Certifications or remove article tag -->
-									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
-										<div class="timeline-entry-inner">
-											<div class="timeline-icon color-3">
-												<i class="icon-pen2"></i>
-											</div>
-											<div class="timeline-label">
-												<h2><a href="#">Introduction to AI and NLP</a> <span></span></h2>
-												<p id="project-tool">~ from Google | Microsoft</p>
-												<p>Infosys Springboard has been best opensource platform to get my
-													fundamentals developed in field of Artificial Intelligence</p>
 											</div>
 										</div>
 									</article>
@@ -719,7 +764,8 @@
 										<div class="addresses">
 											<p class="address-divider">Christ [Deemed to be University], HMT Layout, Nagasandara Post
 												Bangalore - 560073</p>
-											<p>Kaustubha, Near Lavanya Beauty Parlour, Laxmi Nagar, Yadgir, Karnataka - 585202</p>
+											<p>Kaustubha, Near Lavanya Beauty Parlour, Laxmi Nagar, Yadgir, Karnataka - 
+											<br>585202</p>
 										</div>
 									</div>
 								</div>
