--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				aria-expanded="false" aria-controls="navbar"><i></i></a>
 			<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 				<div class="text-center">
-					<div class="author-img" style="background-image: url(images/Profile.jpeg);"></div>
+					<div class="author-img" style="background-image: url(images/Profile.JPEG);"></div>
 					<!-- Add your name -->
 					<h1 id="colorlib-logo"><a href="index.html">Shreenidhi Kulkarni</a></h1>
 					<span class="position"><a
@@ -541,6 +541,62 @@
 								</div>
 							</div>
 
+							<!-- Remove this div if you have only one specialization -->
+							<div class="col-md-4 text-center animate-box">
+								<div class="services color-2">
+									<a href="https://github.com/RiyaBM" target="_blank">
+										<span class="icon">
+											<i class="icon-github"></i>
+										</span>
+									</a>
+									<div class="desc">
+										<!-- Edit content for your specialization -->
+										<h3>Innovative Technology for Social Good: Real-Time Sign Language Generation Using TensorFlow</h3>
+										<p>This paper develops a real-time sign language translation system using TensorFlow Object Detection, 
+											enabling effective communication between deaf and hearing individuals through advanced machine learning techniques.</p>
+										<p id="project-tool">TensorFlow | OpenCV| Python | HTML | CSS | JavaScript | NLTK </p>
+									</div>
+								</div>
+							</div>
+
+							<!-- Remove this div if you have only one specialization -->
+							<div class="col-md-4 text-center animate-box">
+								<div class="services color-2">
+									<a href="https://github.com/RiyaBM" target="_blank">
+										<span class="icon">
+											<i class="icon-github"></i>
+										</span>
+									</a>
+									<div class="desc">
+										<!-- Edit content for your specialization -->
+										<h3>Leukemia Classification (Blood cancer detection using CNN)</h3>
+										<p>This project develops a deep learning model to classify normal and leukemic cells, focusing on Acute Lymphoblastic Leukemia (ALL). 
+											By leveraging advanced deep learning techniques, the model aims to assist in early detection and diagnosis, which is
+											crucial for improving treatment outcomes in pediatric oncology.</p>
+										<p id="project-tool">Python | Keras | VGG19 | OpenCV | NumPy | Matplotlib</p>
+									</div>
+								</div>
+							</div>
+
+
+							<!-- Remove this div if you have only one specialization -->
+							<div class="col-md-4 text-center animate-box">
+								<div class="services color-2">
+									<a href="https://github.com/RiyaBM" target="_blank">
+										<span class="icon">
+											<i class="icon-github"></i>
+										</span>
+									</a>
+									<div class="desc">
+										<!-- Edit content for your specialization -->
+										<h3>Video and Audio Analysis</h3>
+										<p>This project analyzes YouTube videos and audio content by transforming video links into transcripts. 
+											The transcripts are split into individual words for detailed analysis, 
+											with the primary goal of providing timestamps for specific words and indicating where they appear in the content.</p>
+										<p id="project-tool">Python | NLP | YouTube API | NLTK </p>
+									</div>
+								</div>
+							</div>
 
 
 							<!-- Remove this div if you have only one specialization -->
